登录，注册，显示门店列表，添加门店后更新页面

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
+#Fri Oct 23 11:08:41 CST 2015
 eclipse.preferences.version=1
 encoding//app/views/Login/index.html=UTF-8
+encoding//app/views/StoreManage/index.html=UTF-8
 encoding/<project>=UTF-8
