--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,7 @@ date.format=yyyy-MM-dd
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
+  db=mysql://root@10.8.0.7/menu
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
@@ -94,7 +95,7 @@ date.format=yyyy-MM-dd
 # db.url=jdbc:postgresql:database_name
 # db.driver=org.postgresql.Driver
 # db.user=root
-# db.pass=secret
+  db.pass=password@!
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
