--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//app/views/Login/index.html=UTF-8
+encoding//app/views/StoreManage/first.html=UTF-8
 encoding//app/views/StoreManage/index.html=UTF-8
 encoding/<project>=UTF-8
