后台管理框架搭建

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,8 +86,8 @@ date.format=yyyy-MM-dd
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
-  db=mysql://root@10.8.0.7/menu
- # db=mysql://root@localhost/menu
+#  db=mysql://root@10.8.0.7/menu
+  db=mysql://root@localhost/menu
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
@@ -96,7 +96,7 @@ date.format=yyyy-MM-dd
 # db.url=jdbc:postgresql:database_name
 # db.driver=org.postgresql.Driver
 # db.user=root
- db.pass=password@!
+# db.pass=password@!
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
