--- a/.project
+++ b/.project
@@ -15,8 +15,8 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.playframework.playclipse.playNature</nature>
 	</natures>
-	<linkedResources><link><name>secure</name><type>2</type><location>E:/play-1.2.4/modules/secure/app</location></link>
-<link><name>conf/secure</name><type>2</type><location>E:/play-1.2.4/modules/secure/conf</location></link>
-<link><name>public/secure</name><type>2</type><location>E:/play-1.2.4/modules/secure/public</location></link>
+	<linkedResources><link><name>secure</name><type>2</type><location>D:/play-1.2.5/modules/secure/app</location></link>
+<link><name>conf/secure</name><type>2</type><location>D:/play-1.2.5/modules/secure/conf</location></link>
+<link><name>public/secure</name><type>2</type><location>D:/play-1.2.5/modules/secure/public</location></link>
 </linkedResources>
 </projectDescription>
