--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
-#Tue Feb 17 18:35:42 CET 2009
 eclipse.preferences.version=1
+encoding//app/views/Home/index.html=UTF-8
+encoding//app/views/UserManage/userPage.html=UTF-8
+encoding//app/views/tags/navbar.html=UTF-8
+encoding//app/views/tags/sidebar.html=UTF-8
 encoding/<project>=UTF-8
