--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,5 @@
+#Tue Oct 27 15:17:38 CST 2015
 eclipse.preferences.version=1
-encoding//app/views/Home/index.html=UTF-8
-encoding//app/views/UserManage/userPage.html=UTF-8
-encoding//app/views/tags/navbar.html=UTF-8
-encoding//app/views/tags/sidebar.html=UTF-8
+encoding//app/views/Login/index.html=UTF-8
+encoding//app/views/StoreManage/index.html=UTF-8
 encoding/<project>=UTF-8
