--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,12 @@
-#Tue Oct 27 17:19:09 CST 2015
+#Wed Oct 28 16:47:10 CST 2015
 eclipse.preferences.version=1
 encoding//app/views/Home/index.html=UTF-8
 encoding//app/views/Login/index.html=UTF-8
+encoding//app/views/ShopManage/editPage.html=UTF-8
+encoding//app/views/ShopManage/index.html=UTF-8
 encoding//app/views/StoreManage/index.html=UTF-8
 encoding//app/views/UserManage/editUserPage.html=UTF-8
 encoding//app/views/UserManage/userPage.html=UTF-8
+encoding//app/views/tags/navbar.html=UTF-8
+encoding//app/views/tags/sidebar.html=UTF-8
 encoding/<project>=UTF-8
