--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,10 +1,12 @@
-#Wed Oct 28 16:47:10 CST 2015
+#Thu Oct 29 16:47:10 CST 2015
 eclipse.preferences.version=1
 encoding//app/views/Home/index.html=UTF-8
 encoding//app/views/Login/index.html=UTF-8
 encoding//app/views/ShopManage/editPage.html=UTF-8
 encoding//app/views/ShopManage/index.html=UTF-8
+encoding//app/views/StoreManage/first.html=UTF-8
 encoding//app/views/StoreManage/index.html=UTF-8
+encoding//app/views/StoreManage/second.html=UTF-8
 encoding//app/views/UserManage/editUserPage.html=UTF-8
 encoding//app/views/UserManage/userPage.html=UTF-8
 encoding//app/views/tags/navbar.html=UTF-8
