--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,8 +87,8 @@ date.format=yyyy-MM-dd
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
 # db=mysql://root@10.8.0.7/menu
-  db=mysql://root@localhost/menu
-##  db=mysql://root:5c29673ecd@localhost/menu
+##  db=mysql://root@localhost/menu
+  db=mysql://root:5c29673ecd@localhost/menu
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
