--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,7 @@ date.format=yyyy-MM-dd
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
-# http.port=9000
+ http.port=80
 #
 # By default the server listen for HTTP on the wilcard address.
 # You can restrict this.
@@ -87,8 +87,8 @@ date.format=yyyy-MM-dd
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
 # db=mysql://root@10.8.0.7/menu
-##  db=mysql://root@localhost/menu
-  db=mysql://root:5c29673ecd@localhost/menu
+#  db=mysql://root@localhost/menu
+  db=mysql://root:5c29673ecd@121.41.106.61/menu
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
